# customer_churn

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
data_clean_process/: step1_analyze_jsonl.py  step2_validate_required.py  step3_check_cancelled_users.py  step4_clean_data.py  step5_visualize_timestamp_and_data.py
drift_detection/: __init__.py  generate_drift_report.py
ml_training/: __init__.py  main.py  main_visualizer.py  mlflow_tracking_uri.py  mlflow_trainer.py
ml_training/features/: __init__.py  base_features.py  feature_set1.py  feature_set2.py
ml_training/models/: __init__.py  base_model.py  catboost_model.py  lgbm_model.py  rf_model.py  svm_model.py  xgboost_model.py  xgboost_smote_model.py
