[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn_library"
version = "1.0.0"
description = "ML Training Package for Customer Churn Prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Mazari", email = "mmalmazari16@cit.just.edu.jo"}
]
keywords = ["machine-learning", "churn-prediction", "mlflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core ML dependencies
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "imbalanced-learn>=0.10.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.5.0",
    "catboost>=1.0.0",
    "mlflow>=3.6.0",
    # Visualization dependencies
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_training*"]

[tool.ruff]
target-version = "py310"
line-length = 100

# Keep this intentionally conservative so existing code doesn't need a big refactor.
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
